--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -1,2 +1,2 @@
 linelength=240
-filter=-build/c++11,-build/header_guard
+filter=-build/include_subdir,-build/c++11,-build/header_guard,-build/include
