--- a/.github/workflows/first-interaction-greetings.yml
+++ b/.github/workflows/first-interaction-greetings.yml
@@ -1,5 +1,6 @@
-name: Warm Welcome
+name: First Interaction Greetings
 
+# This workflow is triggered when a new issue is opened or a new pull request is made
 on: [pull_request_target, issues]
 
 jobs:
@@ -9,8 +10,8 @@ jobs:
       issues: write
       pull-requests: write
     steps:
-      - name: Say Hello
-      - uses: actions/first-interaction@v1
+      - name: Greet New Contributors
+        uses: actions/first-interaction@v1
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           issue-message: "Welcome to our community! We're thrilled that you've opened an issue. Our team will assist you shortly."
