Changed "runs-on" to ubuntu instead of windows.

--- a/.github/workflows/first-interaction-greetings.yml
+++ b/.github/workflows/first-interaction-greetings.yml
@@ -5,7 +5,7 @@ on: [pull_request_target, issues]
 
 jobs:
   greeting:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     permissions:
       issues: write
       pull-requests: write
@@ -15,4 +15,4 @@ jobs:
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           issue-message: "Welcome to our community! We're thrilled that you've opened an issue. Our team will assist you shortly."
-          pr-message: "Hello! Thanks for your pull request. Our team is looking forward to reviewing your changes. 😄"
+          pr-message: 'Hello! Thanks for your pull request. Our team is looking forward to reviewing your changes. 😄'
