--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -51,19 +51,29 @@ jobs:
       - name: Make LLVM script executable
         run: chmod +x llvm.sh
 
-      # Step 10: Install LLVM 15
-      - name: Install LLVM 15
-        run: sudo ./llvm.sh 15 # Install LLVM version 15
+      # Step 10: Install LLVM 18
+      - name: Install LLVM 18
+        run: sudo ./llvm.sh 18 # Install LLVM version 18
 
-      # Step 11: Generate the build system using CMake and Ninja
+      # Step 11: Set up LLVM 18 environment
+      - name: Set up LLVM 18 environment
+        run: echo "/usr/lib/llvm-18/lib" | sudo tee /etc/ld.so.conf.d/llvm-18.conf && sudo ldconfig
+        env:
+          LLVM_DIR: /usr/lib/llvm-18
+
+      # Step 12: Generate the build system using CMake and Ninja
       - name: Generate build system
         run: cmake -G "Ninja" -S . -B build
+        env:
+          LLVM_DIR: /usr/lib/llvm-18
 
-      # Step 12: Build the project
+      # Step 13: Build the project
       - name: Build project
         run: cmake --build build --config Release
+        env:
+          LLVM_DIR: /usr/lib/llvm-18
 
-      # Step 13: Verify if the executable was created successfully
+      # Step 14: Verify if the executable was created successfully
       - name: Verify executable
         run: |
           if [ -f "./bin/lotus" ]; then
