--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -35,13 +35,25 @@ jobs:
       - name: Install Ninja
         run: sudo apt-get install -y ninja-build
 
-      # Step 6: Install Bison 3.8.2
-      - name: Install Bison
-        run: sudo apt-get install -y bison=2:3.8.2
+      # Step 6: Install Flex 2.6.4 from source
+      - name: Install Flex 2.6.4
+        run: |
+          wget https://github.com/westes/flex/releases/download/v2.6.4/flex-2.6.4.tar.gz
+          tar -xzf flex-2.6.4.tar.gz
+          cd flex-2.6.4
+          ./configure
+          make
+          sudo make install
 
-      # Step 7: Install Flex 2.6.4
-      - name: Install Flex
-        run: sudo apt-get install -y flex=2.6.4
+      # Step 7: Install Bison 3.8.2 from source
+      - name: Install Bison 3.8.2
+        run: |
+          wget http://ftp.gnu.org/gnu/bison/bison-3.8.2.tar.gz
+          tar -xzf bison-3.8.2.tar.gz
+          cd bison-3.8.2
+          ./configure
+          make
+          sudo make install
 
       # Step 8: Download LLVM installation script
       - name: Download LLVM installation script
