--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -78,7 +78,7 @@ jobs:
 
       # Step 12: Generate the build system using CMake and Ninja
       - name: Generate build system
-        run: cmake -G "Ninja" -S . -B build -DCMAKE_PREFIX_PATH=/usr/lib/llvm-18/cmake
+        run: cmake -G "Ninja" -S . -B build -DLLVM_DIR=/usr/lib/llvm-18/cmake -DCMAKE_PREFIX_PATH=/usr/lib/llvm-18/cmake
         env:
           LLVM_DIR: /usr/lib/llvm-18/cmake
 
