--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -14,71 +14,37 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Update package list
-        run: sudo apt-get update
-
-      - name: Remove existing CMake
-        run: sudo apt-get remove -y cmake
-
-      - name: Install CMake 3.26
+      - name: Update and install dependencies
         run: |
+          sudo apt-get update
+          sudo apt-get remove -y cmake
           wget https://github.com/Kitware/CMake/releases/download/v3.26.0/cmake-3.26.0-Linux-x86_64.sh
           sudo mkdir /opt/cmake
           sudo sh cmake-3.26.0-Linux-x86_64.sh --prefix=/opt/cmake --skip-license
           sudo ln -sf /opt/cmake/bin/cmake /usr/local/bin/cmake
-
-      - name: Install Ninja
-        run: sudo apt-get install -y ninja-build
-
-      - name: Install Flex 2.6.4
-        run: |
+          sudo apt-get install -y ninja-build
           wget https://github.com/westes/flex/releases/download/v2.6.4/flex-2.6.4.tar.gz
           tar -xzf flex-2.6.4.tar.gz
-          cd flex-2.6.4
-          ./configure
-          make
-          sudo make install
-          sudo ln -sf /usr/local/bin/flex /usr/bin/flex
-
-      - name: Install Bison 3.8.2
-        run: |
+          cd flex-2.6.4 && ./configure && make && sudo make install
           wget http://ftp.gnu.org/gnu/bison/bison-3.8.2.tar.gz
           tar -xzf bison-3.8.2.tar.gz
-          cd bison-3.8.2
-          ./configure
-          make
-          sudo make install
-          sudo ln -sf /usr/local/bin/bison /usr/bin/bison
-
-      - name: Download LLVM installation script
-        run: wget https://apt.llvm.org/llvm.sh
-
-      - name: Make LLVM script executable
-        run: chmod +x llvm.sh
-
-      - name: Install LLVM 18
-        run: sudo ./llvm.sh 18
-
-      - name: Set up LLVM 18 environment
-        run: |
+          cd bison-3.8.2 && ./configure && make && sudo make install
+          wget https://apt.llvm.org/llvm.sh
+          chmod +x llvm.sh
+          sudo ./llvm.sh 18
           echo "/usr/lib/llvm-18/lib" | sudo tee /etc/ld.so.conf.d/llvm-18.conf
           sudo ldconfig
-          export LLVM_DIR=/usr/lib/llvm-18/cmake
-          export CMAKE_MODULE_PATH=/usr/lib/llvm-18/cmake
-          export PATH=/usr/lib/llvm-18/bin:$PATH
-        shell: bash
 
       - name: Generate build system
-        run: cmake -G "Ninja" -S . -B build -DLLVM_DIR=/usr/lib/llvm-18/cmake -DCMAKE_PREFIX_PATH=/usr/lib/llvm-18/cmake -DCMAKE_MODULE_PATH=/usr/lib/llvm-18/cmake
+        run: cmake -G "Ninja" -S . -B build -DLLVM_DIR=/usr/lib/llvm-18/cmake -DCMAKE_PREFIX_PATH=/usr/lib/llvm-18/cmake
         env:
           LLVM_DIR: /usr/lib/llvm-18/cmake
-          CMAKE_MODULE_PATH: /usr/lib/llvm-18/cmake
+          CMAKE_PREFIX_PATH: /usr/lib/llvm-18/cmake
 
       - name: Build project
         run: cmake --build build --config Release
         env:
           LLVM_DIR: /usr/lib/llvm-18/cmake
-          CMAKE_MODULE_PATH: /usr/lib/llvm-18/cmake
 
       - name: Verify executable
         run: |
