--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -69,21 +69,35 @@ jobs:
           LLVM_DIR: /usr/lib/llvm-18/cmake
           PATH: /usr/lib/llvm-18/bin:$PATH
 
-      # Step 9: Generate the build system using CMake and Ninja
+      # Step 9: Set environment variables for CMake
+      - name: Set up LLVM 18 environment
+        run: |
+          echo "/usr/lib/llvm-18/lib" | sudo tee /etc/ld.so.conf.d/llvm-18.conf
+          sudo ldconfig
+          export LLVM_DIR=/usr/lib/llvm-18/cmake
+          export CMAKE_PREFIX_PATH=/usr/lib/llvm-18/cmake
+          export CMAKE_MODULE_PATH=/usr/lib/llvm-18/cmake
+          export PATH=/usr/lib/llvm-18/bin:$PATH
+          echo "LLVM_DIR: $LLVM_DIR"
+          echo "CMAKE_PREFIX_PATH: $CMAKE_PREFIX_PATH"
+          echo "CMAKE_MODULE_PATH: $CMAKE_MODULE_PATH"
+        shell: bash
+
+      # Step 10: Generate the build system using CMake and Ninja
       - name: Generate build system
-        run: cmake -G "Ninja" -S . -B build -DLLVM_DIR=/usr/lib/llvm-18/cmake -DCMAKE_PREFIX_PATH=/usr/lib/llvm-18/cmake -DCMAKE_MODULE_PATH=/usr/lib/llvm-18/cmake
+        run: cmake -G "Ninja" -S . -B build -DLLVM_DIR=$LLVM_DIR -DCMAKE_PREFIX_PATH=$CMAKE_PREFIX_PATH -DCMAKE_MODULE_PATH=$CMAKE_MODULE_PATH
         env:
           LLVM_DIR: /usr/lib/llvm-18/cmake
           CMAKE_PREFIX_PATH: /usr/lib/llvm-18/cmake
           CMAKE_MODULE_PATH: /usr/lib/llvm-18/cmake
 
-      # Step 10: Build the project
+      # Step 11: Build the project
       - name: Build project
         run: cmake --build build --config Release
         env:
           LLVM_DIR: /usr/lib/llvm-18/cmake
 
-      # Step 11: Verify if the executable was created successfully
+      # Step 12: Verify if the executable was created successfully
       - name: Verify executable
         run: |
           if [ -f "./bin/lotus" ]; then
