--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -17,6 +17,7 @@ jobs:
       - name: Update package list
         run: sudo apt-get update
 
+      # Install wget before using it
       - name: Install wget
         run: sudo apt-get install -y wget
 
