--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -61,6 +61,9 @@ jobs:
           sudo ./llvm.sh 18
           echo "/usr/lib/llvm-18/lib" | sudo tee /etc/ld.so.conf.d/llvm-18.conf
           sudo ldconfig
+        env:
+          LLVM_DIR: /usr/lib/llvm-18/cmake
+          PATH: /usr/lib/llvm-18/bin:$PATH
 
       - name: Set up LLVM 18 environment
         run: |
@@ -74,14 +77,20 @@ jobs:
         shell: bash
 
       - name: Generate build system
-        run: cmake -G "Ninja" -S . -B build -DLLVM_DIR=$LLVM_DIR -DCMAKE_PREFIX_PATH=$CMAKE_PREFIX_PATH -DCMAKE_MODULE_PATH=$CMAKE_MODULE_PATH
+        run: |
+          echo "Generating build system..."
+          cmake -G "Ninja" -S . -B build -DLLVM_DIR=$LLVM_DIR -DCMAKE_PREFIX_PATH=$CMAKE_PREFIX_PATH -DCMAKE_MODULE_PATH=$CMAKE_MODULE_PATH
+          echo "Build system generated."
         env:
           LLVM_DIR: /usr/lib/llvm-18/cmake
           CMAKE_PREFIX_PATH: /usr/lib/llvm-18/cmake
           CMAKE_MODULE_PATH: /usr/lib/llvm-18/cmake
 
       - name: Build project
-        run: cmake --build build --config Release
+        run: |
+          echo "Building project..."
+          cmake --build build --config Release
+          echo "Project built."
         env:
           LLVM_DIR: /usr/lib/llvm-18/cmake
 
