--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -11,51 +11,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the code from the repository
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: Update package list
-      - name: Update package list
-        run: sudo apt-get update
+      - name: Install CMake and Ninja
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y cmake ninja-build
 
-      # Step 3: Install CMake
-      - name: Install CMake
-        run: sudo apt-get install -y cmake=3.18.4-0ubuntu1
-
-      # Step 4: Install Ninja
-      - name: Install Ninja
-        run: sudo apt-get install -y ninja-build=1.10.0-1
-
-      # Step 5: Install Bison
-      - name: Install Bison
-        run: sudo apt-get install -y bison=2:3.5.1+dfsg-1
-
-      # Step 6: Install Flex
-      - name: Install Flex
-        run: sudo apt-get install -y flex=2.6.4-6.2
-
-      # Step 7: Download LLVM installation script
-      - name: Download LLVM installation script
-        run: wget https://apt.llvm.org/llvm.sh
-
-      # Step 8: Make LLVM script executable
-      - name: Make LLVM script executable
-        run: chmod +x llvm.sh
-
-      # Step 9: Install LLVM
-      - name: Install LLVM
-        run: sudo ./llvm.sh 18
-
-      # Step 10: Generate the build system using CMake and Ninja
       - name: Generate build system
         run: cmake -G "Ninja" -S . -B build
 
-      # Step 11: Build the project
       - name: Build project
         run: cmake --build build --config Release
 
-      # Step 12: Verify if the executable was created successfully
       - name: Verify executable
         run: |
           if [ -f "./bin/lotus" ]; then
