updated the workflow to only affect the current branch if that could fix the error on the dev branch

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -2,9 +2,11 @@ name: C/C++ CI for Lotus Compiler
 
 on:
   push:
-    branches: [main, dev]
+    # branches: [main, dev]
+    branches: [llvm-workflow-fix]
   pull_request:
-    branches: [main, dev]
+    # branches: [main, dev]
+    branches: [llvm-workflow-fix]
 
 jobs:
   build:
