Refactored and moved the code for codegen to multiple files, formatted code to be under 80 character long, added the ability to provide an output.ll file when running the program, and added tests for specific features in tests/code/

--- a/.gitIgnore
+++ b/.gitIgnore
@@ -38,6 +38,9 @@ Thumbs.db
 *.env
 !*.env.example
 
+# Ignore LLVM IR files
+*.ll
+
 # Ignore .lts, .ltsu, and .lotus files everywhere
 *.lts
 *.ltsu
