added custom types to CodegenResult and allocation data and made the pointer dereference operator work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ add_executable(Lotus src/main.cpp
         src/generator/loopContext.h
         ${BISON_Parser_OUTPUTS}
         ${FLEX_Lexer_OUTPUTS}
+        src/generator/typeSystem.h
 )
 
 # Ensures that llvm links against the correct libraries
